2008-03-04  Eitan Isaacson  <eitan@ascender.com>

	* tests/outpos_compbrl.c:
	* tests/inpos_compbrl.c: Renamed to inpos.
	
	* tests/Makefile.am: 
	* tests/brl_checks.c: 
	* tests/brl_checks.h: 
	* tests/capitalized_with_sentance.c: 
	* tests/capitalized_word.c: 
	* tests/comp_brl_at_cursor.c: 
	* tests/comp_brl_at_cursor.h: 
	* tests/outpos_compbrl.c: New test that validates input postiion
	of computer braille translated string.
	* tests/present_progressive.c: 

2008-03-02  Eitan Isaacson  <eitan@ascender.com>

	* INSTALL: Updated.
	* tables/hi-in-g1.utb: Fixed table include.
	* tests/Makefile.am: Added new test.
	* tests/capitalized_with_sentance.c: New test that tests cursor
	position on a sentance with compBrlAtCursor.
	* tests/comp_brl_at_cursor.c: Fixed test routine.

2008-02-11  Eitan Isaacson  <eitan@ascender.com>

	* tables/Makefile.am: 
	* tables/hyph_en_uS.dic: Further changes from John.

	* liblouis/compileTranslationTable.c: Changes from John.

	* Makefile.am: 
	* configure.in: 
	* tests: 
	* tests/Makefile.am: 
	* tests/capitalized_word.c: 
	* tests/comp_brl_at_cursor.c: 
	* tests/comp_brl_at_cursor.h: 
	* tests/present_progressive.c: Added a start of a test thing.

2008-01-29  Eitan Isaacson  <eitan@ascender.com>

	* configure.in: Bumped to new version.
	* Makefile.am: Added doc subdir.
	* doc/Makefile.am: Added doc files to extra dist.

	* configure.in: Bumped to new version.
	* tools/Makefile.am: Changed tool names
	* tools/allround.c: 
	* tools/basicround.c: 
	* tools/checktable.c: 
	* tools/dotsround.c: 
	* tools/roundtrip.c: 
	* tools/testback.c: 
	* tools/translate.c: 
	* tools/lou_allround.c: 
	* tools/lou_basicround.c: 
	* tools/lou_checktable.c: 
	* tools/lou_dotsround.c: 
	* tools/lou_roundtrip.c: 
	* tools/lou_testback.c: 
	* tools/lou_translate.c: Prefixed all binaries with lou_.

2008-01-23  Eitan Isaacson  <eitan@ascender.com>

	* configure.in: 
	* doc/liblouis-guide.html: 
	* doc/liblouis-guide.txt: 