@@ -1,3 +1,7 @@
+2008-03-06  Eitan Isaacson  <eitan@ascender.com>
+
+	* liblouis/lou_translateString.c: Updated from John (1.3.53).
+
 2008-03-04  Eitan Isaacson  <eitan@ascender.com>
 
 	* tests/outpos_compbrl.c:
